terraform/01-network.tf
resource "google_compute_network" "vpc" {
  name                    = "vpc-prod"
  auto_create_subnetworks = false
  routing_mode            = "REGIONAL"
}
